# LTG

./: .gitattributes  .gitignore  INTERFACE_NOTES.md  LTG-Autoplay-Tester.bat  LTG-Autoplay-Tester.command  LTG-Combat-Cockpit.command  LTG-Combat.command  LTG-Deckbuilder.bat  LTG-Deckbuilder.command  LTG-Game.bat  LTG-Game.command  LTG-Start.bat  LTG-Start.command  LTG_Install_Guide.html  README.md  WINDOWS_INSTALL.md  ltg_design_update_01.md  ltg_design_update_02.md  ltg_design_update_03.md  ltg_design_update_04_enemy_framework.md  ltg_design_update_05_character_build.md  ltg_design_update_06_enemy_intelligence.md  ltg_design_update_07_errata_and_rebalance.md  ltg_design_update_08_tier_one.md  ltg_design_update_09_tier_two.md  ltg_design_update_10_adventures.md  ltg_design_update_12_roadmap_tier_one.md  ltg_design_update_13_autoplay_tester.md  ltg_design_update_14_enemy_kit_floor.md  ltg_design_update_15_live_movement.md  ltg_game_design_document.md  ltg_player_guide.html  pyproject.toml  requirements.txt  start.command
.claude/: launch.json
apps/autoplay-tester/: pyproject.toml
apps/autoplay-tester/data/gauntlets/baseline-1/: 01_cutthroat_alley.json  06_rusted_sentinel.json  07_last_palisade.json  08_summoning_circle.json  manifest.json  sparring_partner.json
apps/autoplay-tester/data/gauntlets/baseline-2/: 02_mendicant_shrine.json  03_bonefire_rite.json  04_lash_wardens.json  05_brood_nest.json  manifest.json  sparring_partner.json  training_ally.json
apps/autoplay-tester/ltg_autoplay_tester/: __init__.py  app.py  enemy_analysis.py  gauntlets.py  jobs.py  launch.py  probes.py
apps/autoplay-tester/ltg_autoplay_tester/frontend/: app.js  index.html  styles.css
apps/combat/: pyproject.toml
apps/combat/frontend/: app.js  index.html  styles.css
apps/combat/ltg_combat/: __init__.py  __main__.py  cockpit.py  engine.py  harness.py  loader.py  repl.py  scenario.py  serialize.py  server.py  state.py
apps/combat/ltg_combat/autoplay/: __init__.py  cli.py  policies.py  report.py  runner.py  soak.py
apps/deckbuilder/: CUSTOM_CARD_SCHEMA.md  pyproject.toml
apps/deckbuilder/frontend/: app.js  index.html  styles.css
apps/deckbuilder/ltg_deckbuilder/: __init__.py  __main__.py  app.py  ingest.py  scryfall.py  update.py
apps/game-server/: README.md  pyproject.toml
apps/game-server/ltg_game_server/: __init__.py  __main__.py  adventure.py  app.py  appctl.py  art.py  content.py  launch.py  launch_all.py  llm.py  session.py  snapshot.py
backend/: __init__.py  app.py  mappings.py  schema.py  scryfall.py
content/: ambush_on_the_blackpine_road.json  the_amber_reliquary_of_the_sap_priests.json  the_chime_choir_of_bellhollow.json  the_cinderwing_rookery.json  the_drowned_watch.json  the_frostmaze_of_vaelryn.json  the_frostmaze_of_vaelryn__act1.json  the_frostmaze_of_vaelryn__act2.json  the_frostmaze_of_vaelryn__act3.json  the_fungal_hollow.json  the_ironwatch_cordon.json  the_loom_of_the_widow_weavers.json  the_loom_of_the_widow_weavers__act1.json  the_loom_of_the_widow_weavers__act2.json  the_loom_of_the_widow_weavers__act3.json  the_mirage_choir_of_suhail.json  the_salt_wraith_tide_riders.json  the_warrens_of_gnashpit.json  the_warrens_of_gnashpit__act1.json  the_warrens_of_gnashpit__act2.json  the_warrens_of_gnashpit__act3.json  trial_of_the_rusted_keep.json  trial_of_the_rusted_keep__act1.json  trial_of_the_rusted_keep__act2.json  trial_of_the_rusted_keep__act3.json
core/: pyproject.toml
core/ltg_core/: __init__.py  lints.py  schema.py  selfupdate.py  translation.py
examples/: anthem.json  banishing_light.json  bitterblossom.json  conditional_strike.json  counterspell.json  cultivate.json  dark_ritual.json  encounter_a.json  encounter_c.json  encounter_crimson_coven.json  encounter_ironhide_warband.json  encounter_skyfangs.json  (+21 more)
(+112 files in other folders)
