[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ltg-core"
version = "0.1.0"
description = "LTG shared core — effect schema, target descriptors, keyword & translation registry, validator, loadout JSON schema. The single source of truth, depended on by both apps."
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.5",
    "typing-extensions>=4.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ltg_core*"]
