[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ltg-combat"
version = "0.1.0"
description = "LTG Combat — player-facing deterministic runtime (scaffold). Consumes a validated loadout JSON via ltg-core; never depends on the Deckbuilder."
requires-python = ">=3.9"
dependencies = [
    "ltg-core",
]

[project.scripts]
ltg-combat = "ltg_combat.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ltg_combat*"]
