[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ltg-deckbuilder"
version = "0.1.0"
description = "LTG Deckbuilder — designer-facing authoring app (Scryfall import, translation, editing, export). Imports ltg-core."
requires-python = ">=3.9"
dependencies = [
    "ltg-core",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "requests>=2.31",
]

[project.scripts]
ltg-deckbuilder = "ltg_deckbuilder.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ltg_deckbuilder*"]
