[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ltg-game"
version = "0.1.0"
description = "LTG-Game — the playable multiplayer game UI server. A FastAPI + WebSocket authority/relay around the existing headless combat engine (ltg-combat). Owns zero rules."
requires-python = ">=3.9"
dependencies = [
    "ltg-core",
    "ltg-combat",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12",
    "httpx>=0.27",
]

[project.scripts]
ltg-game = "ltg_game_server.launch:main"
ltg-start = "ltg_game_server.launch_all:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ltg_game_server*"]
